--- a/app/src/main/res/layout/home_screen_fragment.xml
+++ b/app/src/main/res/layout/home_screen_fragment.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".presentation.home_screen.HomeScreenFragment"
     android:layout_width="match_parent"
     android:orientation="vertical"
@@ -19,15 +20,62 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
+        android:orientation="horizontal"
         tools:listitem="@layout/training_item"
         />
 
-    <TextView
+    <androidx.cardview.widget.CardView
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="6dp"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:text="Скоро здесь появится статистика :)" />
+        android:layout_height="wrap_content">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:padding="8dp"
+            android:orientation="vertical"
+            android:layout_height="match_parent">
+            <TextView
+                android:layout_width="match_parent"
+                android:text="@string/statistics"
+                android:textSize="20sp"
+                android:textColor="@color/black"
+                android:layout_marginBottom="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_height="wrap_content"/>
+            <TextView
+                android:id="@+id/totalTrainingsCountTextView"
+                android:textSize="18sp"
+                android:layout_width="match_parent"
+                android:layout_marginStart="8dp"
+                android:layout_marginBottom="8dp"
+                android:layout_height="wrap_content"/>
+            <TextView
+                android:id="@+id/totalSetsCountTextView"
+                android:textSize="18sp"
+                android:layout_width="match_parent"
+                android:layout_marginStart="8dp"
+                android:layout_marginBottom="8dp"
+                android:layout_height="wrap_content"/>
+            <TextView
+                android:id="@+id/totalRepsCountTextView"
+                android:layout_width="match_parent"
+                android:textSize="18sp"
+                android:layout_marginStart="8dp"
+                android:layout_marginBottom="8dp"
+                android:layout_height="wrap_content"/>
+            <TextView
+                android:id="@+id/totalWeightCountTextView"
+                android:layout_width="match_parent"
+                android:textSize="18sp"
+                android:layout_marginStart="8dp"
+                android:layout_marginBottom="8dp"
+                android:layout_height="wrap_content"/>
+
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
 
 </LinearLayout>
