--- a/app/src/main/res/layout/home_screen_fragment.xml
+++ b/app/src/main/res/layout/home_screen_fragment.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".presentation.home_screen.HomeScreenFragment"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical"
-    android:layout_height="match_parent">
+    tools:context=".presentation.home_screen.HomeScreenFragment">
 
-        <com.example.workoutdiary.presentation.home_screen.custom_views.SideDatePicker
-            android:id="@+id/month_date_picker"
-            android:layout_width="match_parent"
-            android:layout_margin="4dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:orientation="horizontal" />
+    <com.example.workoutdiary.presentation.home_screen.custom_views.SideDatePicker
+        android:id="@+id/month_date_picker"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_margin="4dp"
+        android:orientation="horizontal" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/training_recycler_view"
@@ -21,61 +21,87 @@
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
         android:orientation="horizontal"
-        tools:listitem="@layout/training_item"
-        />
+        tools:listitem="@layout/training_item" />
 
     <androidx.cardview.widget.CardView
-        android:layout_marginTop="8dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         app:cardCornerRadius="8dp"
-        app:cardElevation="6dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        app:cardElevation="6dp">
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:padding="8dp"
+            android:layout_height="match_parent"
             android:orientation="vertical"
-            android:layout_height="match_parent">
+            android:padding="8dp">
+
             <TextView
                 android:layout_width="match_parent"
-                android:text="@string/statistics"
-                android:textSize="20sp"
-                android:textColor="@color/black"
-                android:layout_marginBottom="8dp"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:layout_height="wrap_content"/>
+                android:layout_marginBottom="8dp"
+                android:text="@string/statistics"
+                android:textColor="@color/black"
+                android:textSize="20sp" />
+
             <TextView
                 android:id="@+id/totalTrainingsCountTextView"
-                android:textSize="18sp"
                 android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginBottom="8dp"
-                android:layout_height="wrap_content"/>
+                android:textSize="18sp" />
+
             <TextView
                 android:id="@+id/totalSetsCountTextView"
-                android:textSize="18sp"
                 android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginBottom="8dp"
-                android:layout_height="wrap_content"/>
+                android:textSize="18sp" />
+
             <TextView
                 android:id="@+id/totalRepsCountTextView"
                 android:layout_width="match_parent"
-                android:textSize="18sp"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginBottom="8dp"
-                android:layout_height="wrap_content"/>
+                android:textSize="18sp" />
+
             <TextView
                 android:id="@+id/totalWeightCountTextView"
                 android:layout_width="match_parent"
-                android:textSize="18sp"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginBottom="8dp"
-                android:layout_height="wrap_content"/>
+                android:textSize="18sp" />
+
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:padding="8dp"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="6dp">
+
+        <com.patrykandpatrick.vico.views.chart.ChartView
+            android:id="@+id/chart"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:chart="column"
+            app:showBottomAxis="true"
+            app:showStartAxis="true" />
+
+
+    </androidx.cardview.widget.CardView>
 
 </LinearLayout>
