HomeScreenFragment updated to show exercise statistics. StatisticsDao updated.

--- a/app/src/main/res/layout/home_screen_fragment.xml
+++ b/app/src/main/res/layout/home_screen_fragment.xml
@@ -97,7 +97,7 @@
             android:layout_width="match_parent"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
             android:textAlignment="center"
-            android:text="Отжимания"
+            android:layout_marginBottom="16dp"
             android:layout_height="wrap_content"/>
 
         <com.patrykandpatrick.vico.views.chart.ChartView
