--- a/app/src/main/res/layout/edit_statistics_screen.xml
+++ b/app/src/main/res/layout/edit_statistics_screen.xml
@@ -85,4 +85,12 @@
         android:layout_marginEnd="8dp"
         android:layout_height="wrap_content"/>
 
+    <Button
+        android:id="@+id/resetButton"
+        android:layout_width="match_parent"
+        android:text="@string/reset_parameters"
+        android:visibility="gone"
+        android:layout_margin="8dp"
+        android:layout_height="wrap_content"/>
+
 </LinearLayout>
