--- a/app/src/main/res/layout/favourites_screen.xml
+++ b/app/src/main/res/layout/favourites_screen.xml
@@ -10,6 +10,7 @@
         android:text="@string/empty_templates_message"
         android:gravity="center"
         android:textSize="20sp"
+        android:visibility="gone"
         android:padding="16dp"
         android:textAlignment="center"
         android:layout_height="match_parent"/>
