--- a/app/src/main/res/layout/add_edit_training_screen.xml
+++ b/app/src/main/res/layout/add_edit_training_screen.xml
@@ -8,16 +8,35 @@
     android:orientation="vertical"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/date_text_view"
+    <FrameLayout
+        android:id="@+id/frameLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:gravity="center_horizontal"
-        android:textAppearance="?attr/textAppearanceHeadline6"
-        android:textStyle="bold"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="20.04.22 (сегодня)" />
+        android:layout_marginTop="4dp"
+        android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/date_text_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_gravity="center|center_vertical"
+            android:textAppearance="?attr/textAppearanceHeadline6"
+            android:textStyle="bold"
+            tools:text="20.04.22 (сегодня)" />
+
+        <androidx.appcompat.widget.AppCompatImageButton
+            android:id="@+id/favouriteImageButton"
+            android:layout_gravity="end|center_vertical"
+            android:src="@drawable/ic_favourite_border"
+            android:scaleType="center"
+            android:padding="8dp"
+            android:foregroundTint="?attr/colorPrimary"
+            android:background="?actionBarItemBackground"
+            android:layout_width="48dp"
+            android:layout_height="48dp" />
+
+    </FrameLayout>
+
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textInputLayout"
@@ -26,7 +45,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:hint="@string/training_name"
-        app:layout_constraintTop_toBottomOf="@+id/date_text_view"
+        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
         tools:layout_editor_absoluteX="16dp">
 
         <com.google.android.material.textfield.TextInputEditText
