--- a/app/src/main/res/layout/favourites_screen.xml
+++ b/app/src/main/res/layout/favourites_screen.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/emptyTemplatesMessageTextView"
+        android:id="@+id/emptyFavouritesMessageTextView"
         android:layout_width="match_parent"
         android:text="@string/empty_templates_message"
         android:gravity="center"
@@ -19,9 +19,19 @@
         android:id="@+id/titleTextView"
         android:layout_width="match_parent"
         android:visibility="gone"
+        android:layout_marginBottom="4dp"
         android:text="@string/favourite_trainings"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
+        android:layout_height="wrap_content"/>
+
+    <TextView
+        android:id="@+id/favouritesDeleteMessageTextView"
+        android:layout_width="match_parent"
+        android:padding="8dp"
+        android:textAlignment="center"
+        android:visibility="gone"
+        android:text="@string/deleteFavouritesInfoMessage"
         android:layout_height="wrap_content"/>
 
 
