--- a/app/src/main/res/layout/settings_screen_fragment.xml
+++ b/app/src/main/res/layout/settings_screen_fragment.xml
@@ -1,17 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="8dp"
+    android:orientation="vertical">
 
     <TextView
-        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:text="@string/settings"
-        android:layout_margin="8dp"
         android:textAlignment="center"
-        android:layout_height="wrap_content"/>
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:text="@string/app_language" />
 
+    <RadioGroup
+        android:id="@+id/languageRadioGroup"
+        android:layout_width="match_parent"
+        android:layout_marginStart="8dp"
+        android:layout_height="wrap_content">
+        <RadioButton
+            android:id="@+id/russianLanguageRadioButton"
+            android:layout_width="match_parent"
+            android:text="@string/russian"
+            android:layout_height="wrap_content"/>
+        <RadioButton
+            android:id="@+id/englishLanguageRadioButton"
+            android:text="@string/english"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+    </RadioGroup>
 
 </LinearLayout>
