Url support in exercise is added

--- a/app/src/main/res/layout/add_exercise_screen_fragment.xml
+++ b/app/src/main/res/layout/add_exercise_screen_fragment.xml
@@ -67,6 +67,8 @@
             android:id="@+id/exercise_description_edit_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:linksClickable="true"
+            android:autoLink="web|email"
             android:inputType="textMultiLine" />
     </com.google.android.material.textfield.TextInputLayout>
 
