--- a/app/src/main/res/layout/add_exercise_screen_fragment.xml
+++ b/app/src/main/res/layout/add_exercise_screen_fragment.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -14,6 +14,20 @@
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
         />
+
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/image_picker"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:scaleType="centerInside"
+        android:layout_gravity="center"
+        android:background="@drawable/shape_radius54"
+        android:src="@drawable/ic_photo"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp" />
+
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/exercise_name_wrapper"
@@ -98,4 +112,4 @@
         android:text="@string/add_exercise"
         android:layout_margin="16dp"/>
 
-</LinearLayout>
+</ScrollView>
