Image scale type updated. Info button on add edit training block is added

--- a/app/src/main/res/layout/add_edit_training_block_screen.xml
+++ b/app/src/main/res/layout/add_edit_training_block_screen.xml
@@ -44,23 +44,39 @@
                     tools:text="Бицепс" />
             </com.google.android.material.textfield.TextInputLayout>
 
-            <com.google.android.material.textfield.TextInputLayout
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="8dp"
-                app:layout_constraintBottom_toBottomOf="@id/muscleChoiceView">
-
-                <AutoCompleteTextView
-                    android:id="@+id/exercise_choice_view"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:dropDownHeight="250dp"
+                android:gravity="center"
+                android:layout_height="wrap_content">
+                <com.google.android.material.textfield.TextInputLayout
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:hint="@string/exercise"
-                    android:inputType="textCapSentences"
-                    tools:text="Сгибания на бицепс" />
-            </com.google.android.material.textfield.TextInputLayout>
+                    android:padding="8dp"
+                    app:layout_constraintBottom_toBottomOf="@id/muscleChoiceView">
+
+                    <AutoCompleteTextView
+                        android:id="@+id/exercise_choice_view"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:dropDownHeight="250dp"
+                        android:layout_weight="1"
+                        android:hint="@string/exercise"
+                        android:inputType="textCapSentences"
+                        tools:text="Сгибания на бицепс" />
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <ImageButton
+                    android:layout_width="32dp"
+                    android:layout_height="32dp"
+                    android:layout_marginEnd="8dp"
+                    android:background="?selectableItemBackgroundBorderless"
+                    android:src="@drawable/ic_info"
+                    app:tint="?colorPrimary"
+                    />
+            </LinearLayout>
+
 
             <TextView
                 android:layout_width="match_parent"
