--- a/app/src/main/res/layout/add_edit_training_block_screen.xml
+++ b/app/src/main/res/layout/add_edit_training_block_screen.xml
@@ -68,12 +68,13 @@
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <ImageButton
+                    android:id="@+id/exercise_details_image_button"
                     android:layout_width="32dp"
                     android:layout_height="32dp"
                     android:layout_marginEnd="8dp"
                     android:background="?selectableItemBackgroundBorderless"
                     android:src="@drawable/ic_info"
-                    app:tint="?colorPrimary"
+                    app:tint="@color/black"
                     />
             </LinearLayout>
 
